syntax = "proto3";

package mr_rpc;

option go_package = "github.com/nikitamityushov/map_reduce/protos/mr_rpc_v1";
option java_package = "com.github.nikitamityushov.map_reduce.protos.mr_rpc_v1";

service MapReduce {
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
}

enum TaskType {
    MAP = 0;
    REDUCE = 1;
}

message TaskDto {
    int64 id = 1;
    TaskType taskType = 2;
    repeated string chunks = 3;
}

message GetTaskRequest {

}

message GetTaskResponse {
    TaskDto task = 1;
}
